Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <h4>
+<a id="erlang" class="anchor" href="#erlang" aria-hidden="true"><span class="octicon octicon-link"></span></a>Erlang</h4>
+
+<p>Hydra requires Erlang 18. You can download it <a href="https://www.erlang-solutions.com/downloads/download-erlang-otp">here</a></p>
+
+<h4>
 <a id="elixir" class="anchor" href="#elixir" aria-hidden="true"><span class="octicon octicon-link"></span></a>Elixir</h4>
 
-<p>Install Elixir in order to be able to build the project. To do that, follow the link: <a href="http://elixir-lang.org/install.html">Elixir Installation</a></p>
+<p>Install Elixir in order to be able to build the project. <a href="http://elixir-lang.org/install.html">Elixir Installation</a></p>
 
 <h4>
 <a id="building" class="anchor" href="#building" aria-hidden="true"><span class="octicon octicon-link"></span></a>Building</h4>
